--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database*
+/config/youtube_api.yml
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
 /node_modules
+
